# Family_Book

./: .env.example  .gitignore  Dockerfile  README.md  README_copy.md  docker-compose.yml  pyproject.toml  start.sh  tailwind.config.js
app/: config.py  database.py  logger.py  main-copy.py  main.py  models.py  run_bot_check.py  security.py  tests.yml
app/api/: auth.py  posts.py
app/api/auth/: __init__.py  guest.py  login.py  profile.py  register.py
app/api/posts/: __init__.py  comments.py  feed.py  likes.py
app/core/: celery_app.py  redis.py  templates.py
app/routers/: admin.py  calendar.py  family.py
app/services/: cleanup.py  notification.py  notifier.py
app/static/: app.js  manifest.json  sw.js
app/static/css/: main.css  style.css
app/templates/: base.html  calendar.html  family.html  index.html  login.html  post_detail.html  profile.html  register.html  settings.html
app/templates/admin/: dashboard.html
app/templates/admin/includes/: _log_lines.html
app/templates/includes/: _calendar_day_content.html  _comments_list.html  _confirm_modal.html  _flash.html  _head.html  _modals.html  _settings_drawer.html  calendar.html  create_post_btn.html  create_post_madal.html  navbar.html  post_card.html  sidebar.html
app/utils/: flash.py  images.py
migrations/: env.py
migrations/versions/: 2c3fb96ea1ef_add_comment_parent_id.py  afd9a8515a27_add_notifications_and_audit_log.py
nginx/: nginx.conf
tests/: conftest.py  test_admin.py  test_auth.py  test_bot.py  test_cleanup.py  test_guest.py  test_posts.py  test_security.py  test_ui.py
