[project]
name = "family-book"
version = "0.1.0"
description = ""
authors = [
    {name = "Mihhail Karasjov",email = "114910034+Mihhail327@users.noreply.github.com"}
]
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "gunicorn (>=25.0.3,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
